# PathfindingAlgorithmsComparison

./: CMakeLists.txt  main.cpp
Data/include/: Board.h  BoardInteractiveSymbol.h  DataManager.cpp  DataManager.h  Direction.h  EndPoint.h  JsonReader.h  Player.h  Reader.h  Statistics.h  TxtWriter.h  Writer.h
Data/include/Board/: Board.h  BoardInteractiveSymbol.h  EndPoint.h  Player.h
Data/include/DynamicEnum/: DynamicEnum.h  EnumValue.h  IntDynamicEnum.h
Data/include/FileHandlers/: Reader.h  TxtWriter.h  Writer.h
Data/src/: Board.cpp  BoardInteractiveSymbol.cpp  DataManager.cpp  EndPoint.cpp  JsonReader.cpp  Player.cpp  Reader.cpp  TxtWriter.cpp  Writer.cpp
Data/src/Board/: Board.cpp  BoardInteractiveSymbol.cpp  EndPoint.cpp  Player.cpp
Data/src/FileHandlers/: JsonReader.cpp  Reader.cpp  TxtWriter.cpp  Writer.cpp
Logic/include/: Algorithm.h  BFS.h  DFS.h  Dijkstra.h  DirectorySystem.h  Heuristic.h  LogicManager.h  Node.h
Logic/include/Algorithms/: AStar.h  Algorithm.h  BFS.h  DFS.h  Dijkstra.h  JPS.h
Logic/src/: Algorithm.cpp  BFS.cpp  DFS.cpp  Dijkstra.cpp  DirectorySystem.cpp  Heuristic.cpp  LogicManager.cpp  Node.cpp
Logic/src/Algorithms/: AStar.cpp  Algorithm.cpp  BFS.cpp  DFS.cpp  Dijkstra.cpp  JPS.cpp
TestDir/: Test.cpp
TestDir/DataTest/: BoardTest.cpp  DirectionTest.cpp  JsonReaderTest.cpp  PlayerTest.cpp
TestDir/LogicTest/: AlgorithmTest.cpp
res/: config.json
res/Labs/: Labyrinth.txt  Labyrinth1.txt  Labyrinth2.txt  Labyrinth3.txt  Labyrinth4.txt  Labyrinth5.txt  Labyrinth6.txt
